--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,4 +1,5 @@
 @import 'reset'
+@import 'variables'
 
 img
   max-width: 100%
@@ -10,9 +11,75 @@ header.top
   z-index: 1
   width: calc(100% - 10px)
   padding: 10px
+  height: 20px
   img
     width: 10%
   nav
     float: right
+    margin-right: 10px
 
 
+.splash
+  position: relative
+  margin-top: 40px
+  font-weight: bold
+  h1
+    position: absolute
+    top: 20%
+    left: 50%
+    transform: translateX(-50%)
+    width: 80%
+    font-size: 30px
+    color: $primary-red
+    background: ivory
+    padding: 10px
+
+.ninja
+  display: block
+  text-align: center
+  padding: 30px
+  h3
+    font-size: 30px
+    font-weight: bold
+    margin-bottom: 30px
+  a
+    display: inline-block
+    border: 2px solid black
+    text-decoration: none
+    height: 50px
+    vertical-align: top
+    &:hover
+      cursor: pointer
+  span
+    position: relative
+    vertical-align: top
+    line-height: 50px
+    padding: 0 30px
+    font-size: 18px
+    color: black
+    font-weight: bold
+  img
+    height: 30px
+    top: 6px
+    left: 10px
+    position: relative
+    filter: drop-shadow(2px 2px 20px, rgb(0, 0, 0))
+    transform-origin: center
+  button
+    background: transparent
+    border: none
+    position: relative
+    &:hover
+      cursor: pointer
+      img
+        animation: 1s linear infinite spin
+
+@keyframes spin 
+  0% 
+    transform: rotate(0deg)
+  100% 
+    transform: rotate(360deg)
+
+.stallions
+  width: 100%
+  background: $primary-red
