stallions basically styled

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -82,4 +82,17 @@ header.top
 
 .stallions
   width: 100%
-  background: $primary-red
+  margin: 30px auto
+  background: darken(white, 5%)
+  header
+    text-align: center
+    margin: 0 auto
+    margin-bottom: 40px
+    padding: 20px 0
+    position: relative
+    background: white
+    box-shadow: 0px 7px 15px -11px rgba(0,0,0,.5)
+
+    h3
+      font-size: 40px
+      font-weight: bold
